--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django>=4.2,<5.0
 
 # Django REST framework
 djangorestframework>=3.14,<4.0
+djangorestframework-simplejwt==5.3.0
 
 # PostgreSQL database adapter
 psycopg2-binary>=2.9,<3.0
